[package]
name = "house"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
documentation = "http://docs.rs/scheduling"
description="A searchable typed datastore built with sled"
readme = "README.md"
keywords = ["database", "datastore", "search", "sled", ]
license = "MIT"
categories = ["database-implementations", "data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.32.0-rc1"
